# bitmap

./: .gitignore  CMakeLists.txt  README  README.md
app/: CMakeLists.txt  app.cpp
apps/: CMakeLists.txt
src/: CMakeLists.txt  Config.cmake.in  bitmap.cpp  bitmap.h  color.cpp
test/: CMakeLists.txt  test.h  testBitDepth_1.cpp  testBitDepth_24.cpp
